Add cargo to unittest action

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -16,6 +16,12 @@ jobs:
     - name: Check out the code
       uses: actions/checkout@v3
 
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -23,7 +29,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip setuptools wheel maturin
+        maturin develop  # Build and install Rust dependency locally
         pip install -e .
         pip install unittest-xml-reporting  # Optional for better output formatting
 
